# Autonomous-Navigation-

./: README.md  eiratech_dir.html
install/: local_setup.sh  setup.sh
install/nav2_cropmap/share/ament_index/resource_index/package_run_dependencies/: nav2_cropmap
install/nav2_cropmap/share/nav2_cropmap/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nav2_cropmap/share/nav2_cropmap/cmake/: nav2_cropmapConfig.cmake
install/nav2_cropmap/share/nav2_cropmap/launch/: navigation.launch.py
install/robot_bringup/share/robot_bringup/: local_setup.sh  package.sh  package.xml
install/robot_bringup/share/robot_bringup/launch/: .bridge.launch.py.swp  .gazebo_sim.launch.py.swp  gazebo_sim.launch.py  rviz.launch.py  test.launch.py
install/robot_bringup/share/robot_bringup/worlds/: .farm_world.world.swp  farm_world.world
install/robot_control/share/ament_index/resource_index/parent_prefix_path/: robot_control
install/robot_control/share/robot_control/: package.sh
install/robot_description/share/ament_index/resource_index/package_run_dependencies/: robot_description
install/robot_description/share/robot_description/: local_setup.sh  package.sh
install/robot_description/share/robot_description/meshes/: wheel_back_left.STL  wheel_front_right.STL
install/robot_description/share/robot_description/rviz/: robot.rviz
install/robot_description/share/robot_description/urdf/: .cropMap_urdf.urdf.swo  .cropMap_urdf.urdf.swp  .dummy.urdf.swo  .dummy.urdf.swp  .robot.urdf.xacro.swo  .robot.urdf.xacro.swp  cropmap.urdf.xacro  dummy.urdf
log/: latest_build
robot_control/config/: teleop_config.yaml
robot_description/: CMakeLists.txt
robot_description/meshes/: back_camera.STL
robot_description/urdf/: cropMap_urdf.urdf
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/nav2_cropmap/: CMakeLists.txt  package.xml
src/nav2_cropmap/config/: nav2_params.yaml
src/nav2_cropmap/launch/: waypoint_following.launch.py
src/robot_bringup/: CMakeLists.txt
src/robot_bringup/launch/: basic_test.launch.py  bridge.launch.py  complete_demo.launch.py  teleop.launch.py
src/robot_bringup/models/terrain_1/: model.config
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/config/: controller_config.yaml
src/robot_control/launch/: controller_manager.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: bridge.yaml
src/robot_description/meshes/: TC_V0.STL  front_camera.STL  wheel_back_right.STL  wheel_front_left.STL
src/robot_description/urdf/: cropMap_urdf.urdf  robot.urdf.xacro
