<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.1</version>
  <description>Control package for the crop mapping robot</description>
  <maintainer email="manish.murthy.2025@mumail.ie">Manish Murthy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>robot_description</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>teleop_twist_joy</depend>
  <depend>teleop_twist_keyboard</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
